// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Mixins basic + accum 1`] = `
Array [
  Object {
    "accum": Object {
      "logger": Object {
        "go": "log",
      },
      "luger": Object {
        "go": "bang",
      },
    },
    "caller": "Object.<anonymous> (__tests__/index.test.ts:111:12)",
    "hostname": "testhost",
    "level": 40,
    "logger": Object {
      "go": "log",
    },
    "luger": Object {
      "go": "bang",
    },
    "msg": "hello",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`Basic Mixins property overwrite 1`] = `
Array [
  Object {
    "caller": "Object.<anonymous> (__tests__/index.test.ts:130:12)",
    "hostname": "testhost",
    "level": 40,
    "logger": Object {
      "go": "brrr",
    },
    "msg": "hello",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`Basic Object + String = Format 1`] = `
Array [
  Object {
    "hostname": "testhost",
    "level": 40,
    "msg": "hello",
    "omg": true,
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`Basic Object 1`] = `
Array [
  Object {
    "hostname": "testhost",
    "level": 40,
    "omg": true,
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`Basic Object with undefined props 1`] = `
Array [
  Object {
    "hostname": "testhost",
    "level": 40,
    "omg": "_(undefined)",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`Basic Object, String Format, String 1`] = `
Array [
  Object {
    "hostname": "testhost",
    "level": 40,
    "msg": "hello world",
    "omg": true,
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`Basic Object, String Format, String 2`] = `
Array [
  Object {
    "hostname": "testhost",
    "level": 40,
    "msg": "hello world:and 123",
    "omg": true,
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`Basic String Format, Object 1`] = `
Array [
  Object {
    "hostname": "testhost",
    "level": 40,
    "msg": "hello {\\"omg\\":true}",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`Basic String, Object 1`] = `
Array [
  Object {
    "hostname": "testhost",
    "level": 40,
    "msg": "hello",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`Basic Trace Caller Force (production) 1`] = `
Array [
  Object {
    "caller": "Object.<anonymous> (__tests__/index.test.ts:78:12)",
    "hostname": "testhost",
    "level": 40,
    "msg": "hello",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;
